Done allocate partners (or implicitly guests) in assign-wedding and remove in edit-wedding