@@ -8,9 +8,9 @@ import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -110,15 +110,15 @@ public class AddressBookParserTest {
     public void parseCommand_findName() throws Exception {
         List<String> keywords = Arrays.asList("foo", "bar", "baz");
         FindNameCommand command = (FindNameCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " n/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " n/" + String.join(" ", keywords));
         assertEquals(new FindNameCommand(new NameContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findAddress() throws Exception {
-        List<String> keywords = Arrays.asList("Jurong West Street");
+        List<String> keywords = List.of("Jurong West Street");
         FindAddressCommand command = (FindAddressCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " a/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " a/" + String.join(" ", keywords));
         assertEquals(new FindAddressCommand(new AddressContainsKeywordsPredicate(keywords)), command);
     }
 
@@ -126,23 +126,23 @@ public class AddressBookParserTest {
     public void parseCommand_findEmail() throws Exception {
         List<String> keywords = Arrays.asList("sally@gmail.com", "bob@example.com");
         FindEmailCommand command = (FindEmailCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " e/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " e/" + String.join(" ", keywords));
         assertEquals(new FindEmailCommand(new EmailContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findPhone() throws Exception {
-        List<String> keywords = Arrays.asList("99394835");
+        List<String> keywords = List.of("99394835");
         FindPhoneCommand command = (FindPhoneCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " p/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " p/" + String.join(" ", keywords));
         assertEquals(new FindPhoneCommand(new PhoneContainsKeywordsPredicate(keywords)), command);
     }
 
     @Test
     public void parseCommand_findTag() throws Exception {
-        List<String> keywords = Arrays.asList("florist");
+        List<String> keywords = List.of("florist");
         FindTagCommand command = (FindTagCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " t/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " t/" + String.join(" ", keywords));
         assertEquals(new FindTagCommand(new TagContainsKeywordsPredicate(keywords)), command);
     }
 
@@ -150,7 +150,7 @@ public class AddressBookParserTest {
     public void parseCommand_findWedding() throws Exception {
         List<String> keywords = Arrays.asList("Snoopy's", "wedding");
         FindWeddingCommand command = (FindWeddingCommand) parser.parseCommand(
-                FindCommand.COMMAND_WORD + " w/" + keywords.stream().collect(Collectors.joining(" ")));
+                FindCommand.COMMAND_WORD + " w/" + String.join(" ", keywords));
         assertEquals(new FindWeddingCommand(new WeddingContainsKeywordsPredicate(keywords)), command);
     }
 
@@ -250,11 +250,13 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_assignWedding() throws Exception {
-        HashSet<Wedding> weddingsToAdd = new HashSet<>(Arrays.asList(new Wedding(new WeddingName("Wedding 19")),
-                new Wedding(new WeddingName("Joe's Wedding"))));
+        HashMap<Wedding, String> weddingsToAdd = new HashMap<>() {
+            { put(new Wedding(new WeddingName("Wedding 19")), "g"); }
+            { put(new Wedding(new WeddingName("Joe's Wedding")), "g"); }
+        };
         String userInput = AssignWeddingCommand.COMMAND_WORD + " " + INDEX_FIRST.getOneBased()
                 + " w/Wedding 19 w/Joe's Wedding";
-        AssignWeddingCommand expectedCommand = new AssignWeddingCommand(INDEX_FIRST, weddingsToAdd);
+        AssignWeddingCommand expectedCommand = new AssignWeddingCommand(INDEX_FIRST, weddingsToAdd, false);
 
         AssignWeddingCommand command = (AssignWeddingCommand) parser.parseCommand(userInput);
         assertEquals(expectedCommand, command);
